# ethonline

backend/: README.md  Untitled.ipynb  discord_test.py  pyproject.toml
backend/app/: discord_bot.py  main.py
contracts/: hardhat.config.js  package-lock.json  package.json
contracts/contracts/: DynamicNFT.sol  DynamicNFTServicePayment.sol  IDynamicNFT.sol
contracts/scripts/: deploy.js
contracts/test/: NFT.js
discord_bot/: app.js
frontend/: .env.example  .gitignore  package-lock.json  package.json  postcss.config.js  tailwind.config.js  webpack.config.js
frontend/src/: index.html  index.js
frontend/src/app/: App.js
frontend/src/app/charts/: BarChart.js  LineChart.js  MapChart.js  PieChart.js  StackedChart.js
frontend/src/app/components/: CommunityMembers.js  CommunityReach.js  DiscordActiveMembers.js  GeographyCountryTargeting.js  NFTSales.js  Navbar.js  Stats.js  TopCommunityMembers.js
frontend/src/app/pages/: About.js  DynamicNFT.json  DynamicNFT_old.json  Home.js  Lock.json
