[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.81.0"
pandas = "^1.4.4"
async = "^0.6.2"
SQLAlchemy = "^1.4.40"
numpy = "^1.23.2"
uvicorn = "^0.18.3"
discord = "^2.0.0"
matplotlib = "^3.6.0"
wordcloud = "^1.8.2.2"
spacy = "3.4.1"
wheel = "^0.37.1"
en-core-web-trf = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_trf-3.4.0/en_core_web_trf-3.4.0-py3-none-any.whl"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "app.main:start"
